ajout de la partie portefolio et contact

--- a/index.html
+++ b/index.html
@@ -18,35 +18,34 @@
   </head>
   <body></body>
 </html><!--     .wappers.row -->
-<header class="container-fluid">
-  <!--nav.navbar.navbar-default.navbar-fixed-top
+<!--header.container-fluid
+nav.navbar.navbar-default.navbar-fixed-top
   .container-fluid
     ul.nav.navbar-nav
         -var list = {"home":"#home", "aboutme":"#aboutme", "skill":"#skill", "contact":"#contact"}
         each link, item in list
             li.text-capitalize: a(href= link) 
-  
-  -->
-</header>
+
+-->
 <section class="container-fluid" id="home">
-  <div class="row">
-    <div class="profil">
-      <div class="round_outter">
-        <div class="round_inner">
-          <div class="portrait"></div>
-        </div>
-      </div>
-      <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior based in Brittany.</span>
-        <div class="separeted"></div>
-        <ul class="social">
-          <li><a class="icon ion-social-github" href="#"></a></li>
-          <li><a class="icon ion-social-twitter" href="#"></a></li>
-          <li><a class="icon ion-social-linkedin" href="#"></a></li>
-          <li><a class="icon ion-social-googleplus" href="#"></a></li>
-        </ul>
+  <div class="profil">
+    <div class="round_outter">
+      <div class="round_inner">
+        <div class="portrait"></div>
       </div>
     </div>
-    <nav>
+    <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior based in Brittany.</span>
+      <div class="separeted"></div>
+      <ul class="social">
+        <li><a class="icon ion-social-github" href="#"></a></li>
+        <li><a class="icon ion-social-twitter" href="#"></a></li>
+        <li><a class="icon ion-social-linkedin" href="#"></a></li>
+        <li><a class="icon ion-social-googleplus" href="#"></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="box row">
+    <nav id="sc3">
       <!--.container-fluid-->
       <ul>
         <li><a href="#home">home</a></li>
@@ -62,10 +61,68 @@
 </section>
 <section class="container-fluid" id="aboutme">
   <div class="row">
-    <div class="aboutme">
+    <div class="about">
       <h4>About me</h4>
       <hr/>
       <p>I’m Roy a freelance designer & front end developer based in the UK, working Globaly with Startups and Agencies. I design & develop compelling apps, intuitive interfaces, and engaging brands. All helping to improve response, drive sales, and boost profitability.I’ve been lucky to work with:</p>
     </div>
+  </div>
+</section>
+<section id="project">
+  <div class="container">
+    <ul class="filter">
+      <li><a href="all">all</a></li>
+      <li><a href="development">development</a></li>
+      <li><a href="design">design</a></li>
+      <li><a href="user_x">user experience</a></li>
+    </ul>
+    <div class="portfolio">
+      <div class="boxx"><img/>
+        <h3>zeeze</h3>
+        <p>zezezez</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>zezezez</h3>
+        <p>zezezez</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>ezeze</h3>
+        <p>zezeze</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>ezeze</h3>
+        <p>zezeze</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>éé"é"d</h3>
+        <p>fsffefr</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>gf""fd"</h3>
+        <p>efzdfd</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>é"e"edé</h3>
+        <p>efefzf</p>
+      </div>
+      <div class="boxx"><img/>
+        <h3>dfdf"fé</h3>
+        <p>élkkll</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="contact">
+  <div class="container-contact">
+    <h2>Restons en contact</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <form role="form">
+        <input type="text" placeholder="Enter text"/>
+        <input type="text" placeholder="Enter text"/>
+        <input type="text" placeholder="Enter text"/>
+        <textarea type="text" placeholder="Enter text"></textarea>
+        <button></button>
+      </form>
+    </p>
   </div>
 </section>
