--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ nav.navbar.navbar-default.navbar-fixed-top
         <div class="portrait"></div>
       </div>
     </div>
-    <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior based in Brittany.</span>
+    <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior </br> based in Brittany.</span>
       <div class="separeted"></div>
       <ul class="social">
-        <li><a class="icon ion-social-github" href="#"></a></li>
-        <li><a class="icon ion-social-twitter" href="#"></a></li>
-        <li><a class="icon ion-social-linkedin" href="#"></a></li>
-        <li><a class="icon ion-social-googleplus" href="#"></a></li>
+        <li><a class="ion-social-github" href="#"></a></li>
+        <li><a class="ion-social-twitter" href="#"></a></li>
+        <li><a class="ion-social-linkedin" href="#"></a></li>
+        <li><a class="ion-social-googleplus" href="#"></a></li>
       </ul>
     </div>
   </div>
@@ -55,74 +55,166 @@ nav.navbar.navbar-default.navbar-fixed-top
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
-    <!--.button.next
-    -->
+    <div class="next">
+      <div class="toggle_next"><i class="ion-ios-arrow-thin-down"></i></div>
+      <div class="indication">
+        <p>ou<br/>scroller</p>
+      </div>
+    </div>
   </div>
 </section>
 <section class="container-fluid" id="aboutme">
   <div class="row">
     <div class="about">
       <h4>About me</h4>
-      <hr/>
-      <p>I’m Roy a freelance designer & front end developer based in the UK, working Globaly with Startups and Agencies. I design & develop compelling apps, intuitive interfaces, and engaging brands. All helping to improve response, drive sales, and boost profitability.I’ve been lucky to work with:</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+    </div>
+    <div class="skilldev">
+      <div class="codedev"></div>
+    </div>
+    <div class="skilltools">
+      <div class="tools">
+        <div class="toolHtml toolbox">
+          <div class="title">
+            <h4> Html Tools:</h4>
+          </div>
+          <div class="list-tools">
+            <ul>
+              <li>Jade.Js /Pug.Js</li>
+              <li>Slim Ruby</li>
+            </ul>
+          </div>
+        </div>
+        <div class="toolCss toolbox">
+          <div class="title">
+            <h4> Css Tools:</h4>
+          </div>
+          <div class="list-tools">
+            <ul>
+              <li>Bootstrap</li>
+              <li>Materialize</li>
+            </ul>
+          </div>
+        </div>
+        <div class="toolJs toolbox">
+          <div class="title">
+            <h4> Javascript Tools:</h4>
+          </div>
+          <div class="list-tools">
+            <ul>
+              <li>AngularJs 1</li>
+              <li>Jquery</li>
+              <li>React</li>
+            </ul>
+          </div>
+        </div>
+        <div class="toolWorkflow toolbox">
+          <div class="title">
+            <h4> Workflow Tools:</h4>
+          </div>
+          <div class="list-tools">
+            <ul>
+              <li>Git</li>
+              <li>Grunt</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 <section id="project">
-  <div class="container">
-    <ul class="filter">
-      <li><a href="all">all</a></li>
-      <li><a href="development">development</a></li>
-      <li><a href="design">design</a></li>
-      <li><a href="user_x">user experience</a></li>
-    </ul>
+  <div class="wrapper">
+    <div class="select">
+      <ul class="filter">
+        <li class="all">all</li>
+        <li class="development">development</li>
+        <li class="design">design</li>
+        <li class="user_x">ux/ui</li>
+      </ul>
+    </div>
     <div class="portfolio">
-      <div class="boxx"><img/>
-        <h3>zeeze</h3>
-        <p>zezezez</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>zezezez</h3>
-        <p>zezezez</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>ezeze</h3>
-        <p>zezeze</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>ezeze</h3>
-        <p>zezeze</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>éé"é"d</h3>
-        <p>fsffefr</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>gf""fd"</h3>
-        <p>efzdfd</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>é"e"edé</h3>
-        <p>efefzf</p>
-      </div>
-      <div class="boxx"><img/>
-        <h3>dfdf"fé</h3>
-        <p>élkkll</p>
+      <div class="swap">
+        <div class="sample"><img/>
+          <h3>zeeze</h3>
+          <p>zezezez</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>zezezez</h3>
+          <p>zezezez</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>ezeze</h3>
+          <p>zezeze</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>ezeze</h3>
+          <p>zezeze</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>éé"é"d</h3>
+          <p>fsffefr</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>gf""fd"</h3>
+          <p>efzdfd</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>é"e"edé</h3>
+          <p>efefzf</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>dfdf"fé</h3>
+          <p>élkkll</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>dfdf"fé</h3>
+          <p>élkkll</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>gf""fd"</h3>
+          <p>efzdfd</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>é"e"edé</h3>
+          <p>efefzf</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>dfdf"fé</h3>
+          <p>élkkll</p>
+        </div>
+        <div class="sample"><img/>
+          <h3>dfdf"fé</h3>
+          <p>élkkll</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
 <section id="contact">
   <div class="container-contact">
-    <h2>Restons en contact</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      <form role="form">
-        <input type="text" placeholder="Enter text"/>
-        <input type="text" placeholder="Enter text"/>
-        <input type="text" placeholder="Enter text"/>
-        <textarea type="text" placeholder="Enter text"></textarea>
-        <button></button>
+    <div class="info_contact">
+      <h2>Restons en contact</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+    </div>
+    <div class="form_contact">
+      <form class="form-horizontal" method="POST">
+        <div class="form_group middle_width">
+          <input class="top" type="text" placeholder="Prénom"/>
+        </div>
+        <div class="form_group middle_width">
+          <input class="top" type="text" placeholder="Nom"/>
+        </div>
+        <div class="form_group full_width">
+          <input type="email" placeholder="Email"/>
+        </div>
+        <div class="form_group full_width">
+          <textarea type="text" placeholder="Message"></textarea>
+        </div>
+        <div class="form_group full_width">
+          <button class="send">Envoyer</button>
+        </div>
       </form>
-    </p>
+    </div>
   </div>
 </section>
