creation fichier grid font animation master scss dans l'idée de remplacer fichier style.css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <meta author="Ronald Marcel"/>
     <meta language="Fr"/>
     <title>Portfolio</title>
-    <!--link(href= "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")-->
     <link href="build/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
-    <!--link(href='build/onepage-scroll/onepage-scroll.css')-->
     <link href="build/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="build/css/master.css" rel="stylesheet" type="text/css"/>
     <!--script(src='build/js/jquery-2.2.4.js')-->
-    <!--script(src='https://code.jquery.com/ui/1.12.0/jquery-ui.js')-->
     <!--script(src='build/js/script.js')-->
-    <!--script(src='build/js/callinjson.js')-->
-    <!--script(src='build/onepage-scroll/jquery.onepage-scroll.min.js')-->
-    <!--script(src='node_modules/progressbar.js/progressbar.min.js')-->
   </head>
   <body></body>
 </html><!--     .wappers.row -->
@@ -28,37 +23,43 @@ nav.navbar.navbar-default.navbar-fixed-top
 
 -->
 <section class="container-fluid" id="home">
-  <div class="profil">
-    <div class="round_outter">
-      <div class="round_inner">
-        <div class="portrait"></div>
-      </div>
-    </div>
-    <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior </br> based in Brittany.</span>
-      <div class="separeted"></div>
-      <ul class="social">
-        <li><a class="ion-social-github" href="#"></a></li>
-        <li><a class="ion-social-twitter" href="#"></a></li>
-        <li><a class="ion-social-linkedin" href="#"></a></li>
-        <li><a class="ion-social-googleplus" href="#"></a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="box row">
-    <nav id="sc3">
-      <!--.container-fluid-->
-      <ul>
-        <li><a href="#home">home</a></li>
-        <li><a href="#aboutme">about me</a></li>
-        <li><a href="#skill">skill</a></li>
-        <li><a href="#project">projects</a></li>
-        <li><a href="#contact">contact</a></li>
-      </ul>
-    </nav>
-    <div class="next">
-      <div class="toggle_next"><i class="ion-ios-arrow-thin-down"></i></div>
-      <div class="indication">
-        <p>ou<br/>scroller</p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="block">
+        <div class="profil">
+          <div class="round_outter">
+            <div class="round_inner">
+              <div class="portrait"></div>
+            </div>
+          </div>
+          <div class="aboutme"><span class="whoiam">Ronald Marcel</span><span class="role">Front End Developer and Product Designer junior </br> based in Brittany.</span>
+            <div class="separeted"></div>
+            <ul class="social">
+              <li><a class="ion-social-github" href="#"></a></li>
+              <li><a class="ion-social-twitter" href="#"></a></li>
+              <li><a class="ion-social-linkedin" href="#"></a></li>
+              <li><a class="ion-social-googleplus" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="box">
+          <nav id="sc3">
+            <!--.container-fluid-->
+            <ul>
+              <li><a href="#home">home</a></li>
+              <li><a href="#aboutme">about me</a></li>
+              <li><a href="#skill">skill</a></li>
+              <li><a href="#project">projects</a></li>
+              <li><a href="#contact">contact</a></li>
+            </ul>
+          </nav>
+          <div class="next">
+            <div class="toggle_next"><i class="ion-ios-arrow-thin-down"></i></div>
+            <div class="indication">
+              <p>ou<br/>scroller</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
